24-02-2005 Qball <Qball@qballcow.nl>
	* cleaned up some compile warnings.. (and all // comment )


23-02-2005 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Added Playlist tab + obtions
	* src/mpdinteraction.c:	Disconnect is always reload.
	* src/playlist3.c:	make open to location work propperly.
	* src/libmpd.c:		Update timeout on the fly, if connected.
	* src/main.c:		Uses libmpd to track song changes.
	* src/libmpd.[c|h]:	Added function that returns the changed songs.
	* src/mpdinteractions.c:After disconnect not directly a reconnect
	(with autoconnect enabled)


22-02-2005 Qball <qball@qballcow.nl>
	* Move to libmpd complete beside the plchange function.
	* src/preferences.c:	Moved to libmpd.
	* src/main.h:		Removed info.connection, info.status,
	info.stats.
	* src/libmpd.c:		Added support for getting and setting output
	device
	* src/libmpd.c:		Added mpd_ob_playlist_add,
	mpd_ob_plalist_update_dir (and more)functions.
	* src/playlist3.c:	Uses only libmpd now.
	* src/open-locations:	Uses libmpd.
	* src/libmpd.c:		Added get/set crossfade.
	* src/preferences.c:	Moved crossfade to libmpd commands.


21-02-2005 Qball <qball@qballcow.nl>
	* Cleaned up compile warnings.
	* src/playlist3.c:	Make use of queue functions of libmpd
	* src/libmpd.c:		Cleaned up compile warnings.
	* src/libmpd.c:		Added queue commit functions.
	* src/libmpd.c:		Added severall queue functions, for deleting
	song, adding and loading playlist.. 
	* src/libmpd.h:		Added typedef for queue and added a queue to
	the MpdOb struct
	* src/playlist3.c:	Moved mpd_sendFind and mpd_sendSearch to
	libmpd function
	* src/libmpd.c:		Added mpd_ob_playlist_find function. (for
	exact and fuzzy matches)
	* src/libmpd.c:		Added _MpdQueue struct defenition. (not yet
	finished)


20-02-2005 Qball <qball@qballcow.nl>
	* src/libmpd.h:		Added comment.
	* src/playlist3.c:	Make use of mpd_ob_playlist_get_directory
	function;
	* src/libmpd.c:		Added get_directory function.