@@ -1145,7 +1145,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label99">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Outputs:&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Output Devices:&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2286,7 +2286,7 @@ Some  useful examples for format are: &quot;%file%&quot; and &quot;[[%artist% - 
 		  <child>
 		    <widget class="GtkLabel" id="label103">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Interface&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Interface:&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
